@@ -4854,16 +4854,21 @@ ZEND_METHOD(reflection_extension, getFunctions)
 
 		/* Is there a better way of doing this? */
 		while (func->fname) {
-			if (zend_hash_find(EG(function_table), func->fname, strlen(func->fname) + 1, (void**) &fptr) == FAILURE) {
+			int fname_len = strlen(func->fname);
+			char *lc_name = zend_str_tolower_dup(func->fname, fname_len);
+			
+			if (zend_hash_find(EG(function_table), lc_name, fname_len + 1, (void**) &fptr) == FAILURE) {
 				php_error_docref(NULL TSRMLS_CC, E_WARNING, "Internal error: Cannot find extension function %s in global function table", func->fname);
 				func++;
+				efree(lc_name);
 				continue;
 			}
 			
 			ALLOC_ZVAL(function);
 			reflection_function_factory(fptr, NULL, function TSRMLS_CC);
-			add_assoc_zval_ex(return_value, func->fname, strlen(func->fname)+1, function);
+			add_assoc_zval_ex(return_value, func->fname, fname_len+1, function);
 			func++;
+			efree(lc_name);
 		}
 	}
 }
